{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 371,
  "lineage": "0b1b71e5-b15d-a3ec-0ae0-310b50582cb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:security-group/sg-06dc547ab8971f240",
            "description": "Security Group for SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dc547ab8971f240",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "344513066772",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0498ba6202d57f48c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:internet-gateway/igw-0b6528d6f50815f3e",
            "id": "igw-0b6528d6f50815f3e",
            "owner_id": "344513066772",
            "vpc_id": "vpc-0498ba6202d57f48c"
          },
          "dependencies": [
            "module.ec2_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:route-table/rtb-03374777a37c6a060",
            "id": "rtb-03374777a37c6a060",
            "owner_id": "344513066772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6528d6f50815f3e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0498ba6202d57f48c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_vpc.aws_internet_gateway.main-gw",
            "module.ec2_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0066973353f3a727e",
            "route_table_id": "rtb-03374777a37c6a060",
            "subnet_id": "subnet-0f964e651cd3461ba"
          },
          "dependencies": [
            "module.ec2_vpc.aws_internet_gateway.main-gw",
            "module.ec2_vpc.aws_route_table.main-rt",
            "module.ec2_vpc.aws_subnet.main-public",
            "module.ec2_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:subnet/subnet-0f964e651cd3461ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f964e651cd3461ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344513066772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0498ba6202d57f48c"
          },
          "dependencies": [
            "module.ec2_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:344513066772:vpc/vpc-0498ba6202d57f48c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e05a53eee5da74a8",
            "default_route_table_id": "rtb-07b2718483db6b4bf",
            "default_security_group_id": "sg-0b1765db490206602",
            "dhcp_options_id": "dopt-0eb428e4ec7d1bc0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0498ba6202d57f48c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b2718483db6b4bf",
            "owner_id": "344513066772"
          }
        }
      ]
    }
  ]
}